--- a/pages/popup.html
+++ b/pages/popup.html
@@ -1,12 +1,84 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="../styles/main.css" rel="stylesheet" type="text/css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <link href="../vendor/bootstrap-italia.min.css" rel="stylesheet" type="text/css" />
+        <link href="../styles/main.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <button id="visitProfiles">Visita tutti i profili</button>
-        <a href="options.html">Change settings...</a>
+        <div class="it-header-slim-wrapper">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="it-header-slim-wrapper-content">
+                            <a class="d-lg-block navbar-brand" style="font-size: 1rem; font-weight: bold" href="/">LinkedIn integration bot</a>
+                            <div class="it-header-slim-right-zone">
+                                <div class="it-access-top-wrapper">
+                                    <button class="btn btn-primary btn-sm" id="button-linkedin" type="button">
+                                        <svg class="icon icon-white icon-sm"><use xlink:href="../images/sprite.svg#it-linkedin"></use></svg>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <nav class="toolbar toolbar-small">
+            <ul>
+                <li>
+                    <a href="popup.html" class="active">
+                        <svg class="icon icon-sm"><use xlink:href="../images/sprite.svg#it-hearing"></use></svg>
+                        <span class="sr-only">Cerca profili</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="disabled" disabled aria-disabled="true">
+                        <svg class="icon icon-sm"><use xlink:href="../images/sprite.svg#it-presentation"></use></svg>
+                        <span class="sr-only">Contatta visitatori</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="options.html">
+                        <svg class="icon icon-sm"><use xlink:href="../images/sprite.svg#it-settings"></use></svg>
+                        <span class="sr-only">Impostazioni</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+
+        <div class="container">
+            <div class="row">
+                <div class="col col-lg-10">
+                    <h3>Cerca profili</h3>
+                    <p>Funzione che permette di cercare dei profili e quindi fare una visita a ciascuno dei profili restituiti dalla ricerca.</p>
+
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend" style="height: 2.5rem">
+                                <div class="input-group-text"><svg class="icon icon-sm"><use xlink:href="../images/sprite.svg#it-search"></use></svg></div>
+                            </div>
+
+                            <input type="text" class="form-control" id="input-search" name="input-search" value="Human Resource">
+
+                            <div class="input-group-append">
+                                <button class="btn btn-primary" type="button" id="button-search" style="height: 2.5rem; margin:0px">Cerca</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <p id="search-text-result" class="font-italic">Effettua la ricerca.</p>
+              
+                    <button id="button-visit-profiles" type="button" class="btn btn-primary" disabled>Visita tutti i profili</button>
+                </div>
+            </div>
+        </div>
 
         <script src="../scripts/popup.js"></script>
+
+        <script src="../vendor/bootstrap-italia.bundle.min.js"></script>
     </body>
 </html>
