Improved warning for limits

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -24,7 +24,7 @@
 
                             <input type="text" class="form-control" id="input-search" name="input-search" disabled>
                         </div>
-                        <p id="search-text-result" class="font-italic">Verifica la pagina prima di poter procedere.</p>
+                        <p id="search-text-result" class="font-italic font-weight-bold">Verifica la pagina prima di poter procedere.</p>
                     </div>
         
                     <button id="button-verify-page" type="button" class="btn btn-primary">Verifica pagina</button>
