Renamed popup page

--- a/pages/header.html
+++ b/pages/header.html
@@ -16,7 +16,7 @@
 <nav class="toolbar toolbar-small">
     <ul>
         <li>
-            <a href="popup.html" id="popup">
+            <a href="profile.html" id="profile">
                 <svg class="icon icon-sm"><use xlink:href="../images/sprite.svg#it-hearing"></use></svg>
                 <span class="sr-only">Visita profili</span>
             </a>
