--- a/pages/profile.html
+++ b/pages/profile.html
@@ -34,7 +34,7 @@
         </div>
     
         <script src="../scripts/include.js"></script>
-        <script src="../scripts/popup.js"></script>
+        <script src="../scripts/profile.js"></script>
         <script src="../vendor/bootstrap-italia.bundle.min.js"></script>
     </body>
 </html>
