--- a/pages/profile.html
+++ b/pages/profile.html
@@ -23,6 +23,10 @@
                             </div>
 
                             <input type="text" class="form-control" id="input-search" name="input-search" disabled>
+
+                            <div class="input-group-append">
+                                <button class="btn btn-primary" type="button" id="button-search">Vai</button>
+                            </div>
                         </div>
                         <p id="search-text-result" aria-valuenow="0" class="font-italic font-weight-bold">Verifica la pagina prima di poter procedere.</p>
                     </div>
