Prototype of getVisitors function

--- a/pages/header.html
+++ b/pages/header.html
@@ -22,7 +22,7 @@
             </a>
         </li>
         <li>
-            <a href="#" class="disabled" disabled aria-disabled="true">
+            <a href="visitors.html" id="visitors">
                 <svg class="icon icon-sm"><use xlink:href="../images/sprite.svg#it-presentation"></use></svg>
                 <span class="sr-only">Contatta visitatori</span>
             </a>
