--- a/pages/profile.html
+++ b/pages/profile.html
@@ -41,7 +41,7 @@
                         </button>
                     </div>
 
-                    <p id="logs" class="overflow-auto"></p>
+                    <p id="logs"></p>
                 </div>
             </div>
         </div>
