Started to implement API integration

--- a/pages/visitors.html
+++ b/pages/visitors.html
@@ -22,6 +22,8 @@
                         <button class="btn btn-primary float-right" type="button" id="button-get-list" disabled>Scarica lista</button>
                     </div>
 
+                    <div id="profile"></div>
+
                     <p id="logs"></p>
                 </div>
             </div>
